Remove overflow on entity list to avoid tooltip hidden

--- a/mapentity/static/mapentity/style.css
+++ b/mapentity/static/mapentity/style.css
@@ -380,7 +380,6 @@ tr.selected-row td {
     left: 0;
     width: 60px;
     max-height: calc(100vh - 50px);
-    overflow-y: auto;
 }
 
 @media (max-height: 960px) {
